--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -1,186 +1,203 @@
 <nav class="page-sidebar">
-    <div class="page-brand">
-        <a routerLink="/index">
-            <span class="brand">AC</span>
-        </a>
-    </div>
-    <div class="side-menu-wrapper">
-        <div class="side-menu nav scroller">
-            <a class="sidebar-link sidebar-toggler" href="javascript:;">
-                <div class="sidebar-toggler-icon">
-                    <span class="icon-line"></span>
-                    <span class="icon-line"></span>
-                    <span class="icon-line"></span>
-                </div>
-            </a>
-            <a class="sidebar-link active" href="#sidemenu-1" data-toggle="tab" aria-expanded="true"><i class="ti-briefcase"></i>
-                <span class="badge-success badge-point" style="position:absolute; right: 20px; top: 5px;"></span>
-            </a>
-            <a class="sidebar-link" href="#sidemenu-2" data-toggle="tab"><i class="ti-shopping-cart"></i></a>
-            <a class="sidebar-link" href="javascript:;"><i class="ti-support"></i>
-                <span class="badge badge-pink badge-circle" style="position:absolute; right: 20px; top: 5px;">8</span>
-            </a>
-            <a class="sidebar-link" href="#sidemenu-3" data-toggle="tab"><i class="ti-settings"></i></a>
+  <div class="page-brand">
+    <a routerLink="/index">
+      <span class="brand">AC</span>
+    </a>
+  </div>
+  <div class="side-menu-wrapper">
+    <div class="side-menu nav scroller">
+      <a class="sidebar-link sidebar-toggler" href="javascript:;">
+        <div class="sidebar-toggler-icon">
+          <span class="icon-line"></span>
+          <span class="icon-line"></span>
+          <span class="icon-line"></span>
         </div>
+      </a>
+      <a class="sidebar-link active" href="#sidemenu-1" data-toggle="tab" aria-expanded="true"><i class="ti-briefcase"></i>
+        <span class="badge-success badge-point" style="position:absolute; right: 20px; top: 5px;">2</span>
+      </a>
+      <a class="sidebar-link" href="#sidemenu-2" data-toggle="tab"><i class="ti-shopping-cart"></i></a>
+      <a class="sidebar-link" href="#sidemenu-1"><i class="ti-support"></i>
+        <span class="badge badge-pink badge-circle" style="position:absolute; right: 20px; top: 5px;">8</span>
+      </a>
+      <a class="sidebar-link" href="#sidemenu-3" data-toggle="tab"><i class="ti-settings"></i></a>
     </div>
+  </div>
 </nav>
 <div class="sidebar-tabs">
-    <div class="tab-content scroller">
-        <div class="tab-pane sidebar-submenu fade active show" id="sidemenu-1">
-            <a href="javascript:;"><i class="ti-user menu-item-icon"></i>
-                <div>
-                    <h5 class="menu-item-title">Customers</h5><small class="menu-item-text">Customers and activities</small></div>
-            </a>
-            <a href="javascript:;"><i class="ti-email menu-item-icon"></i>
-                <div>
-                    <h5 class="menu-item-title">Mailbox
-                        <span class="badge badge-success badge-circle ml-2">7</span>
-                    </h5><small class="menu-item-text">Customers and activities</small></div>
-            </a>
-            <a class="visited" href="javascript:;"><i class="ti-files menu-item-icon"></i>
-                <div>
-                    <h5 class="menu-item-title">Pages
-                        <span class="badge badge-pink badge-circle ml-2">4</span>
-                    </h5><small class="menu-item-text">Customers and activities</small></div>
-            </a>
-            <a href="javascript:;"><i class="ti-pencil menu-item-icon"></i>
-                <div>
-                    <h5 class="menu-item-title">Posts</h5><small class="menu-item-text">Customers and activities</small></div>
-            </a>
-            <a href="javascript:;"><i class="ti-calendar menu-item-icon"></i>
-                <div>
-                    <h5 class="menu-item-title">Tasks
-                        <span class="badge badge-primary badge-circle ml-2">4</span>
-                    </h5><small class="menu-item-text">Customers and activities</small></div>
-            </a>
-            <a href="javascript:;"><i class="ti-support menu-item-icon"></i>
-                <div>
-                    <h5 class="menu-item-title">Support System
-                        <span class="badge badge-warning badge-circle ml-2">8</span>
-                    </h5><small class="menu-item-text">Customers and activities</small></div>
-            </a>
-            <a href="javascript:;"><i class="ti-server menu-item-icon"></i>
-                <div>
-                    <h5 class="menu-item-title">Server State</h5><small class="menu-item-text">Customers and activities</small></div>
-            </a>
-            <a href="javascript:;"><i class="ti-settings menu-item-icon"></i>
-                <div>
-                    <h5 class="menu-item-title">Settings</h5><small class="menu-item-text">Customers and activities</small></div>
-            </a>
-            <a href="javascript:;"><i class="ti-lock menu-item-icon"></i>
-                <div>
-                    <h5 class="menu-item-title">Security</h5><small class="menu-item-text">Customers and activities</small></div>
-            </a>
+  <div class="tab-content scroller">
+    <div class="tab-pane sidebar-submenu fade active show" id="sidemenu-1">
+      <a href="javascript:;"><i class="ti-user menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Customers</h5><small class="menu-item-text">Customers and activities</small>
         </div>
-        <div class="tab-pane sidebar-submenu fade" id="sidemenu-2">
-            <a href="javascript:;"><i class="ti-bar-chart menu-item-icon"></i>
-                <div>
-                    <h5 class="menu-item-title">Analytics</h5><small class="menu-item-text">Customers and activities</small></div>
-            </a>
-            <a href="javascript:;"><i class="ti-files menu-item-icon"></i>
-                <div>
-                    <h5 class="menu-item-title">Reports
-                        <span class="badge badge-success badge-circle ml-2">9</span>
-                    </h5><small class="menu-item-text">Customers and activities</small></div>
-            </a>
-            <a href="javascript:;"><i class="ti-wallet menu-item-icon"></i>
-                <div>
-                    <h5 class="menu-item-title">Earnings
-                        <span class="badge badge-pink badge-circle ml-2">8</span>
-                    </h5><small class="menu-item-text">Customers and activities</small></div>
-            </a>
-            <a href="javascript:;"><i class="ti-map-alt menu-item-icon"></i>
-                <div>
-                    <h5 class="menu-item-title">Country Analytics</h5><small class="menu-item-text">Customers and activities</small></div>
-            </a>
-            <a href="javascript:;"><i class="ti-truck menu-item-icon"></i>
-                <div>
-                    <h5 class="menu-item-title">Delivery
-                        <span class="badge badge-primary badge-circle ml-2">9</span>
-                    </h5><small class="menu-item-text">Customers and activities</small></div>
-            </a>
-            <a href="javascript:;"><i class="ti-package menu-item-icon"></i>
-                <div>
-                    <h5 class="menu-item-title">Orders
-                        <span class="badge badge-warning badge-circle ml-2">8</span>
-                    </h5><small class="menu-item-text">Customers and activities</small></div>
-            </a>
-            <a href="javascript:;"><i class="ti-gift menu-item-icon"></i>
-                <div>
-                    <h5 class="menu-item-title">Promotions & Gifts</h5><small class="menu-item-text">Customers and activities</small></div>
-            </a>
-            <a href="javascript:;"><i class="ti-user menu-item-icon"></i>
-                <div>
-                    <h5 class="menu-item-title">Customers
-                        <span class="badge badge-pink badge-circle ml-2">8</span>
-                    </h5><small class="menu-item-text">Customers and activities</small></div>
-            </a>
+      </a>
+      <a href="javascript:;"><i class="ti-email menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Mailbox
+            <span class="badge badge-success badge-circle ml-2">7</span>
+          </h5><small class="menu-item-text">Customers and activities</small>
         </div>
-        <div class="tab-pane fade" id="sidemenu-3">
-            <div class="scroller p-4">
-                <div class="font-bold mb-4 mt-2">APP SETTINGS</div>
-                <div class="flexbox mb-4">Show notifications
-                    <label class="checkbox checkbox-success m-0">
-                        <input type="checkbox">
-                        <span class="input-span"></span>
-                    </label>
-                </div>
-                <div class="flexbox mb-4">Enable autologout
-                    <label class="checkbox checkbox-success m-0">
-                        <input type="checkbox" checked>
-                        <span class="input-span"></span>
-                    </label>
-                </div>
-                <div class="flexbox mb-4">Show recent activity
-                    <label class="checkbox checkbox-success m-0">
-                        <input type="checkbox" checked>
-                        <span class="input-span"></span>
-                    </label>
-                </div>
-                <div class="flexbox mb-4">Chat history
-                    <label class="checkbox checkbox-success m-0">
-                        <input type="checkbox">
-                        <span class="input-span"></span>
-                    </label>
-                </div>
-                <div class="flexbox mb-4">Users activity
-                    <label class="checkbox checkbox-success m-0">
-                        <input type="checkbox" checked>
-                        <span class="input-span"></span>
-                    </label>
-                </div>
-                <div class="flexbox mb-4">Orders history
-                    <label class="checkbox checkbox-success m-0">
-                        <input type="checkbox">
-                        <span class="input-span"></span>
-                    </label>
-                </div>
-                <div class="flexbox mb-4">SMS Alerts
-                    <label class="checkbox checkbox-success m-0">
-                        <input type="checkbox">
-                        <span class="input-span"></span>
-                    </label>
-                </div>
-                <div class="font-bold mb-4">SYSTEM SETTINGS</div>
-                <div class="flexbox mb-4">Error Reporting
-                    <label class="checkbox checkbox-success m-0">
-                        <input type="checkbox" checked>
-                        <span class="input-span"></span>
-                    </label>
-                </div>
-                <div class="flexbox mb-4">Server logs
-                    <label class="checkbox checkbox-success m-0">
-                        <input type="checkbox" checked>
-                        <span class="input-span"></span>
-                    </label>
-                </div>
-                <div class="flexbox mb-4">Global search
-                    <label class="checkbox checkbox-success m-0">
-                        <input type="checkbox">
-                        <span class="input-span"></span>
-                    </label>
-                </div>
-            </div>
+      </a>
+      <a class="visited" href="javascript:;"><i class="ti-files menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Pages
+            <span class="badge badge-pink badge-circle ml-2">4</span>
+          </h5><small class="menu-item-text">Customers and activities</small>
         </div>
+      </a>
+      <a href="javascript:;"><i class="ti-pencil menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Posts</h5><small class="menu-item-text">Customers and activities</small>
+        </div>
+      </a>
+      <a href="javascript:;"><i class="ti-calendar menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Tasks
+            <span class="badge badge-primary badge-circle ml-2">4</span>
+          </h5><small class="menu-item-text">Customers and activities</small>
+        </div>
+      </a>
+      <a href="javascript:;"><i class="ti-support menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Support System
+            <span class="badge badge-warning badge-circle ml-2">8</span>
+          </h5><small class="menu-item-text">Customers and activities</small>
+        </div>
+      </a>
+      <a href="javascript:;"><i class="ti-server menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Server State</h5><small class="menu-item-text">Customers and activities</small>
+        </div>
+      </a>
+      <a href="javascript:;"><i class="ti-settings menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Settings</h5><small class="menu-item-text">Customers and activities</small>
+        </div>
+      </a>
+      <a href="javascript:;"><i class="ti-lock menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Security</h5><small class="menu-item-text">Customers and activities</small>
+        </div>
+      </a>
     </div>
+    <div class="tab-pane sidebar-submenu fade" id="sidemenu-2">
+      <a href="javascript:;"><i class="ti-bar-chart menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Analytics</h5><small class="menu-item-text">Customers and activities</small>
+        </div>
+      </a>
+      <a href="javascript:;"><i class="ti-files menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Reports
+            <span class="badge badge-success badge-circle ml-2">9</span>
+          </h5><small class="menu-item-text">Customers and activities</small>
+        </div>
+      </a>
+      <a href="javascript:;"><i class="ti-wallet menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Earnings
+            <span class="badge badge-pink badge-circle ml-2">8</span>
+          </h5><small class="menu-item-text">Customers and activities</small>
+        </div>
+      </a>
+      <a href="javascript:;"><i class="ti-map-alt menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Country Analytics</h5><small class="menu-item-text">Customers and activities</small>
+        </div>
+      </a>
+      <a href="javascript:;"><i class="ti-truck menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Delivery
+            <span class="badge badge-primary badge-circle ml-2">9</span>
+          </h5><small class="menu-item-text">Customers and activities</small>
+        </div>
+      </a>
+      <a href="javascript:;"><i class="ti-package menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Orders
+            <span class="badge badge-warning badge-circle ml-2">8</span>
+          </h5><small class="menu-item-text">Customers and activities</small>
+        </div>
+      </a>
+      <a href="javascript:;"><i class="ti-gift menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Promotions & Gifts</h5><small class="menu-item-text">Customers and activities</small>
+        </div>
+      </a>
+      <a href="javascript:;"><i class="ti-user menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Customers
+            <span class="badge badge-pink badge-circle ml-2">8</span>
+          </h5><small class="menu-item-text">Customers and activities</small>
+        </div>
+      </a>
+    </div>
+    <div class="tab-pane fade" id="sidemenu-3">
+      <div class="scroller p-4">
+        <div class="font-bold mb-4 mt-2">APP SETTINGS</div>
+        <div class="flexbox mb-4">Show notifications
+          <label class="checkbox checkbox-success m-0">
+            <input type="checkbox">
+            <span class="input-span"></span>
+          </label>
+        </div>
+        <div class="flexbox mb-4">Enable autologout
+          <label class="checkbox checkbox-success m-0">
+            <input type="checkbox" checked>
+            <span class="input-span"></span>
+          </label>
+        </div>
+        <div class="flexbox mb-4">Show recent activity
+          <label class="checkbox checkbox-success m-0">
+            <input type="checkbox" checked>
+            <span class="input-span"></span>
+          </label>
+        </div>
+        <div class="flexbox mb-4">Chat history
+          <label class="checkbox checkbox-success m-0">
+            <input type="checkbox">
+            <span class="input-span"></span>
+          </label>
+        </div>
+        <div class="flexbox mb-4">Users activity
+          <label class="checkbox checkbox-success m-0">
+            <input type="checkbox" checked>
+            <span class="input-span"></span>
+          </label>
+        </div>
+        <div class="flexbox mb-4">Orders history
+          <label class="checkbox checkbox-success m-0">
+            <input type="checkbox">
+            <span class="input-span"></span>
+          </label>
+        </div>
+        <div class="flexbox mb-4">SMS Alerts
+          <label class="checkbox checkbox-success m-0">
+            <input type="checkbox">
+            <span class="input-span"></span>
+          </label>
+        </div>
+        <div class="font-bold mb-4">SYSTEM SETTINGS</div>
+        <div class="flexbox mb-4">Error Reporting
+          <label class="checkbox checkbox-success m-0">
+            <input type="checkbox" checked>
+            <span class="input-span"></span>
+          </label>
+        </div>
+        <div class="flexbox mb-4">Server logs
+          <label class="checkbox checkbox-success m-0">
+            <input type="checkbox" checked>
+            <span class="input-span"></span>
+          </label>
+        </div>
+        <div class="flexbox mb-4">Global search
+          <label class="checkbox checkbox-success m-0">
+            <input type="checkbox">
+            <span class="input-span"></span>
+          </label>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
