--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -1,7 +1,7 @@
 <nav class="page-sidebar">
   <div class="page-brand">
     <a routerLink="/index">
-      <span class="brand">AC</span>
+      <span class="brand">ITJOB</span>
     </a>
   </div>
   <div class="side-menu-wrapper">
