--- a/src/app/dashboard/candidat/candidate-edit/candidate-edit.component.html
+++ b/src/app/dashboard/candidat/candidate-edit/candidate-edit.component.html
@@ -1,19 +1,30 @@
 <div class="page-content fade-in-up">
   <div class="ibox">
     <div class="ibox-body">
-      <h5 class="font-strong mb-5">ADD NEW PRODUCT</h5>
+      <h5 class="font-strong mb-5">Mise à jour</h5>
       <div class="row">
         <div class="col-lg-8">
+
           <form #editForm="ngForm" (ngSubmit)="onSubmitForm()">
-            <div class=" form-group mb-4">
-              <label>Product Name - </label>
-              <input class="form-control form-control-solid" type="text" placeholder="Enter Product Name">
+            <div class="form-group mb-4">
+              <label class="ui-switch switch-icon mr-3 mb-0">
+                <input type="checkbox" checked="">
+                <span></span>
+              </label>Activer le candidat pour être visible dans le site
             </div>
+
+            <div class="row">
+              <div class="form-group mb-4 col-sm-6">
+                <label>Référence </label>
+                <input class="form-control form-control-solid" [disabled]='true' type="text" placeholder="Référence du candidat">
+              </div>
+            </div>
+
             <div class="row">
               <div class="col-sm-6 form-group mb-4">
-                <label>Category</label>
+                <label>Titre</label>
                 <div>
-                  <select class="selectpicker show-tick form-control" title="Please select" data-style="btn-solid">
+                  <select class="selectpicker show-tick form-control" title="Madame ou Monsieur" data-style="btn-solid">
                     <optgroup label="Electronics">
                       <option>TV & Video</option>
                       <option>Cameras & Photo</option>
@@ -28,18 +39,56 @@
                   </select>
                 </div>
               </div>
+            </div>
+
+            <div class="row">
               <div class="col-sm-6 form-group mb-4">
-                <label>SKU</label>
-                <input class="form-control form-control-solid" type="text" placeholder="SKU Number">
+                <label>Nom</label>
+                <input class="form-control form-control-solid" type="text" placeholder="Nom du candidat">
+              </div>
+              <div class="col-sm-6 form-group mb-4">
+                <label>Prénom</label>
+                <input class="form-control form-control-solid" type="text" placeholder="Prénom du candidat">
               </div>
             </div>
+
+            <div class="row">
+
+              <div class="col-sm-4 form-group mb-4">
+                <label>Adresse</label>
+                <input class="form-control form-control-solid" type="text" placeholder="Adresse du candidat">
+              </div>
+
+              <div class="col-sm-4 form-group mb-4">
+                <label>Région </label>
+                <div>
+                  <select class="selectpicker show-tick form-control" title="Sélectionner une region" data-style="btn-solid">
+                    <option>USD</option>
+                    <option>Euro</option>
+                    <option>Rouble</option>
+                    <option>Pound</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-6 form-group mb-4">
+                <label>Ville ou code postal</label>
+                <input class="form-control form-control-solid" type="text" placeholder="Ville ou code postal">
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-6 form-group mb-4">
+                <label>Date de naissance</label>
+                <input class="form-control form-control-solid" type="text" placeholder="Quantity">
+              </div>
+            </div>
+
             <div class="row">
               <div class="col-sm-4 form-group mb-4">
-                <label>Price</label>
-                <input class="form-control form-control-solid" type="text" placeholder="Unit Price">
-              </div>
-              <div class="col-sm-4 form-group mb-4">
-                <label>Currency </label>
+                <label>Status </label>
                 <div>
                   <select class="selectpicker show-tick form-control" title="Please select" data-style="btn-solid">
                     <option>USD</option>
@@ -49,81 +98,237 @@
                   </select>
                 </div>
               </div>
-              <div class="col-sm-4 form-group mb-4">
-                <label>Quantity</label>
-                <input class="form-control form-control-solid" type="text" placeholder="Quantity">
+            </div>
+
+            <div class="row">
+              <div class="col-6 mb-4">
+                <div class="row">
+                  <div class="col-sm-12">
+                    <label>Permis <span style="color: red">*</span></label>
+                  </div>
+
+                </div>
+                <div class="row">
+                  <div class="col-4">
+                    <div class="form-group">
+                      <label class="checkbox checkbox-grey checkbox-ebony">
+                        <input type="checkbox" checked="">
+                        <span class="input-span"></span>A`</label>
+                    </div>
+                  </div>
+                  <div class="col-4">
+                    <div class="form-group">
+                      <label class="checkbox checkbox-grey checkbox-ebony">
+                        <input type="checkbox" checked="">
+                        <span class="input-span"></span>A</label>
+                    </div>
+                  </div>
+                  <div class="col-4">
+                    <div class="form-group">
+                      <label class="checkbox checkbox-grey checkbox-ebony">
+                        <input type="checkbox" checked="">
+                        <span class="input-span"></span>B</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-4">
+                    <div class="form-group">
+                      <label class="checkbox checkbox-grey checkbox-ebony">
+                        <input type="checkbox" checked="">
+                        <span class="input-span"></span>C</label>
+                    </div>
+                  </div>
+                  <div class="col-4">
+                    <div class="form-group">
+                      <label class="checkbox checkbox-grey checkbox-ebony">
+                        <input type="checkbox" checked="">
+                        <span class="input-span"></span>D</label>
+                    </div>
+                  </div>
+                  <div class="col-4">
+                    <div class="form-group">
+                      <label class="checkbox checkbox-grey checkbox-ebony">
+                        <input type="checkbox">
+                        <span class="input-span"></span>Aucun</label>
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
 
-
-            <div class="row mt-5" *ngFor="let training of editor.trainings">
-              <div class="col-sm-12 form-group mb-4">
-                <label>École <span style="color: red">*</span></label>
-                <input placeholder="Ex: Université de Majunga" [(ngModel)]="training.training_establishment"
-                  autocomplete="off" class="form-control form-control-solid" name="etablishment" required>
-              </div>
-
-              <div class="col-sm-12 form-group mb-4">
-                <label>Diplôme <span style="color: red">*</span></label>
-                <input placeholder="Ex: Master II" autocomplete="off" [(ngModel)]="training.training_diploma" name="diploma"
-                  class="form-control form-control-solid" required="">
-              </div>
-
-              <div class="col-sm-12 form-group mb-4">
-                <label>Ville <span style="color: red">*</span></label>
-                <input placeholder="Ex: Antananarivo" autocomplete="off" [(ngModel)]="training.training_city" name="training_city"
-                  class="form-control form-control-solid" required="">
-              </div>
-
-              <div class="col-sm-12 form-group mb-4">
-                <label>Pays <span style="color: red">*</span></label>
-                <input placeholder="Ex: Madagascar" autocomplete="off" [(ngModel)]="training.training_country" name="training_country"
-                  class="form-control form-control-solid" required="">
-              </div>
-            </div>
-
-            <div class="row mb-5">
-              <div class="form-group mb-4 col-md-6">
-                <label>De <span style="color: red">*</span></label>
-                <div>
-                  <select class="selectpicker show-tick form-control" title="Please select" data-style="btn-solid">
-                    <option>1959</option><!-- end ngRepeat: year in years -->
-                    <option>1960</option><!-- end ngRepeat: year in years -->
-                    <option>1961</option><!-- end ngRepeat: year in years -->
-                    <option>2014</option><!-- end ngRepeat: year in years -->
-                  </select>
+            <div class="row">
+              <div class="col-12 mb-4">
+                <div class="form-group">
+                  <label>Emploi recherché</label>
+                  <input class="tagsinput form-control form-control-solid" type="text" placeholder="Emploi recherché"
+                    value="Fashion,Dress,Broadway,Autumn collection,Shop">
                 </div>
               </div>
+            </div>
 
-              <div class="form-group mb-4 col-md-6">
-                <label>à <span style="color: red">*</span></label>
-                <div>
-                  <select class="selectpicker show-tick form-control" title="Please select" data-style="btn-solid">
-                    <option>Année</option>
-                    <option>2018</option><!-- end ngRepeat: year in years -->
-                  </select>
+
+            <div class="row">
+              <div class="col-12">
+                <div class="form-group">
+                  <label>Les langues</label>
+                  <input class="tagsinput form-control form-control-solid" type="text" placeholder="Langue" value="Malagasy, Français, Anglais">
                 </div>
               </div>
             </div>
 
-            <div class="form-group mb-4">
-              <label>Tags</label>
-              <input class="tagsinput form-control form-control-solid" type="text" placeholder="Tags" value="Fashion,Dress,Broadway,Autumn collection,Shop">
+
+            <div class="row">
+              <div class="col-12 mb-4">
+                <div class="ibox-body dd pl-0">
+                  <h5 class="font-strong text-uppercase">Formations / Diplômes</h5>
+                  <ul class="media-list media-list-divider dd-list mr-2">
+
+                    <li class="media align-items-center dd-item" [attr.data-index]="i" *ngFor="let training of editor.trainings; let i = index">
+                      <div class="media-body d-flex align-items-center dd-handle">
+                        <div class="flex-1">
+                          <div class="media-heading">{{training.training_establishment}}</div>
+                          <small class="text-muted">{{training.training_diploma}}</small>
+                        </div>
+                        <button (click)="onEditTraining(training.ID)" class="btn btn-sm btn-outline-secondary ">Modifier</button>
+                      </div>
+                    </li>
+
+                  </ul>
+                </div>
+              </div>
             </div>
-            <div class="form-group mb-4">
-              <label>Description</label>
-              <textarea class="form-control form-control-solid" rows="4" placeholder="Description"></textarea>
+
+            <div class="row">
+              <div class="col-12 mb-4">
+                <div class="ibox-body pl-0">
+                  <h5 class="font-strong text-uppercase mb-4">Expériences professionnelles</h5>
+                  <ul class="media-list media-list-divider mr-2">
+
+                    <li class="media align-items-center" *ngFor="let experience of editor.experiences">
+                      <div class="media-body d-flex align-items-center">
+                        <div class="flex-1">
+                          <div class="media-heading">{{experience.exp_company}}</div>
+                          <small class="text-muted">{{experience.exp_positionHeld}}</small>
+                        </div>
+                        <button class="btn btn-sm btn-outline-secondary ">Modifier</button>
+                      </div>
+                    </li>
+
+                  </ul>
+                </div>
+              </div>
             </div>
-            <div class="form-group mb-4">
-              <label class="ui-switch switch-icon mr-3 mb-0">
-                <input type="checkbox" checked="">
-                <span></span>
-              </label>Available</div>
+
+            <div class="row">
+              <div class="col-12 mb-4">
+                <div class="form-group">
+                  <label>Logiciels maitrisés</label>
+                  <input class="tagsinput form-control form-control-solid" type="text" placeholder="Logiciel" value="Oracle,Microsoft Office, Powerpoint">
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-6 mb-4">
+                <h5 class="font-strong text-uppercase mb-4">Centre d'intérêt</h5>
+                <label>Divers</label>
+                <input class="form-control form-control-solid" type="text" placeholder="Divers">
+              </div>
+              <div class="col-md-12">
+
+                <div class="form-group mb-4">
+                  <label>Projet personnel</label>
+                  <textarea class="form-control form-control-solid" rows="4" placeholder="Ajouter une projet personnel"></textarea>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+
+              <div class="col-12 d-flex mb-2">
+                <label class="ui-switch switch-icon switch-solid-info switch-small">
+                  <input type="checkbox" checked="">
+                  <span></span>
+                </label>
+                <span class="mt-auto mb-auto ml-3">Souhaitez-vous recevoir une notification quand une offre d’emploi
+                  est postée sur Itjobmada</span>
+              </div>
+
+              <div class="col-12 d-flex">
+                <label class="ui-switch switch-icon switch-solid-info switch-small">
+                  <input type="checkbox" checked="">
+                  <span></span>
+
+                </label>
+                <span class="mt-auto mb-auto ml-3">Souhaitez-vous recevoir une notification quand une formation est
+                  postée sur Itjobmada</span>
+              </div>
+            </div>
+
             <div class="text-right">
               <button class="btn btn-primary btn-air mr-2" type="submit">Save</button>
               <button class="btn btn-secondary">Cancel</button>
             </div>
+
           </form>
+
+          <div class="modal fade" id="new-mail-modal">
+            <div class="modal-dialog" role="document">
+              <form class="modal-content">
+                <div class="modal-header p-4">
+                  <h5 class="modal-title">NEW MESSAGE</h5>
+                  <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                  </button>
+                </div>
+                <div class="modal-body p-4">
+                  <div class="flexbox mb-4">
+                    <span class="btn-icon-only btn-circle bg-primary-50 text-primary mr-3"><i class="ti-support"></i></span>
+                    <div class="flex-1 d-flex">
+                      <div class="flex-1">
+                        <span class="text-muted mr-2">From:</span>
+                        <div>support@example.com</div>
+                      </div>
+                      <div class="dropdown">
+                        <a class="dropdown-toggle font-16" data-toggle="dropdown"><i class="ti-more-alt"></i></a>
+                        <div class="dropdown-menu dropdown-menu-right">
+                          <a class="dropdown-item"><i class="ti-support"></i>support@example.com</a>
+                          <a class="dropdown-item"><i class="ti-shopping-cart"></i>shopping@example.com</a>
+                          <a class="dropdown-item"><i class="ti-help"></i>help@example.com</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group mb-4">
+                    <input class="form-control form-control-line" type="text" name="to" placeholder="Recipient">
+                  </div>
+                  <div class="form-group mb-4">
+                    <input class="form-control form-control-line" type="text" name="subject" placeholder="Enter Subject">
+                  </div>
+                  <div class="form-group mb-4">
+                    <textarea class="form-control form-control-line" rows="4" name="message" placeholder="Enter Message"></textarea>
+                  </div>
+                </div>
+                <div class="modal-footer justify-content-between bg-primary-50">
+                  <div>
+                    <button class="btn btn-primary btn-rounded mr-3">Submit</button>
+                    <label class="btn btn-sm btn-transparent btn-secondary btn-icon-only btn-circle file-input mb-0"><i
+                        class="la la-paperclip font-20"></i>
+                      <input type="file">
+                    </label>
+                    <label class="btn btn-sm btn-transparent btn-secondary btn-icon-only btn-circle file-input mb-0"><i
+                        class="la la-image font-20"></i>
+                      <input type="file">
+                    </label>
+                    <button class="btn btn-sm btn-transparent btn-secondary btn-icon-only btn-circle"><i class="la la-link font-20"></i></button>
+                  </div>
+                  <a class="text-danger"><i class="la la-trash font-20"></i></a>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
       </div>
     </div>
